--- a/vision.adoc
+++ b/vision.adoc
@@ -55,7 +55,7 @@ Dem Barbetreiber ist es wichtig, dass die Software so einfach wie möglich gesta
 //Geben Sie in knapper Form übersichtsartig die Positionierung der angestrebten Lösung im Vergleich zu verfügbaren Alternativen dar. Das folgende Format kann dazu verwendet werden:
 
 |===
-|Für|	Barbetreiber / Kunden
+|Für|	Barbetreiber(Nicer Cock) / Kunden
 |der / die|	Cocktailzusammenstellung und -versand
 |Das Produkt / die Lösung ist ein | Online-Versand
 |Die / Das	|individuelle Zusammenstellung und den Versand der Cocktails für den Kunden ermöglicht
