--- a/usecase_spec3.adoc
+++ b/usecase_spec3.adoc
@@ -1,27 +1,22 @@
 //Nutzen Sie dieses Template als Grundlage für die Spezifikation *einzelner* Use-Cases. Diese lassen sich dann per Include in das Use-Case Model Dokument einbinden (siehe Beispiel dort).
-== Use-Case: Bestellung aufgeben
+== Use-Case: System warten
 ===	Kurzbeschreibung
 //<Kurze Beschreibung des Use Case>
-Kunde gibt Bestellung im Onlinebestellsystem auf.
 
 ===	Kurzbeschreibung der Akteure
-==== Kunde
+==== Softareentwickler
 
 === Vorbedingungen
 //Vorbedingungen müssen erfüllt, damit der Use Case beginnen kann, z.B. Benutzer ist angemeldet, Warenkorb ist nicht leer...
-. Benutzer angemeldet
-. Altersverifizierung abgeschlossen
-. Bezahlmethode ausgewählt 
-. Software funktionsbereit
+<Vorbedingung 1>
 
 === Standardablauf (Basic Flow)
 //Der Standardablauf definiert die Schritte für den Erfolgsfall ("Happy Path")
 
-. Der Use Case beginnt, wenn Kunde Produkt zum Warenkorb hinzufügt
-. Im Kundenkonto hinterlegte Daten bestätigen
-. AGB akzeptieren
-. Bezahlmethode akzeptieren
-. Kauf bestätigen
+. Der Use Case beginnt, wenn <akteur> <macht>…
+. <Standardablauf Schritt 1>
+. 	… 
+. <Standardablauf Schritt n>
 . Der Use Case ist abgeschlossen.
 
 === Alternative Abläufe
